# project2001

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
lib/: CMakeLists.txt
lib/fgl/: readme.md
lib/fgl/include/: fgl.h
lib/fgl/src/: CMakeLists.txt  fgl_matrix.h  fgl_transform.h  fgl_vertex.c  fgl_vertex.h
lib/imgui/: CMakeLists.txt
lib/rlImGui/: CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp  p2k1.h  p2k1_animation.h  p2k1_capsule_collision.c  p2k1_capsule_collision.h  p2k1_game_state.c  p2k1_game_state.h  p2k1_local_state.h  p2k1_rig.h  p2k1_stage.h
src/include/: CMakeLists.txt  fgl_transform.c  fgl_transform.h  fgl_vertex.c  fgl_vertex.h  rl_draw_capsule.c  rl_draw_capsule.h
